# Android-CMake-VSCode-Sample

./: .gitignore  README.md  build.gradle  setup.ps1
app/: build.gradle  release.keystore
app/src/main/cpp/: CMakeLists.txt
source/: CMakeLists.txt  main.cpp
